--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,10 +16,16 @@
     --foreground: #ededed;
   }
 }
+html {
+  scroll-behavior: smooth;
+  
+}
+
 
 /* Use CSS variables for body styles */
 body {
   background-color: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  
 }
